refatoracao de arquivos

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -23,6 +23,8 @@
 \newcommand{\dominatesk}[2]{dom_k(\sol{#1}, \sol{#2})}
 \newcommand{\setIN}{\{1, \ldots, n\}}
 
+\input{src/mokp-grid.tex}   % configuracoes para desenho de grid
+
 \newtheorem{theorem}{Theorem}
 
 \begin{document}
