--- a/doc/pubs/MOKP-DP-2017/src/secs/04-kdtree.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/04-kdtree.tex
@@ -38,3 +38,4 @@ Indexing the solutions and range operations.
 % com maiores dimensões.
 Tends to increase the feasibility on problems with higher dimensions.
 
+\input{src/imgs/dom-kd.tex}
