--- a/doc/pubs/MOKP-DP-2017/src/algs/dp2.tex
+++ b/doc/pubs/MOKP-DP-2017/src/algs/dp2.tex
@@ -4,7 +4,7 @@
     \For{$k \gets 1, n$}
       \State 2...
     \EndFor
-  \State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dominates{a}{x} \}$
+  \State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dom{a}{x} \}$
     \Comment{dominance filter}
   \State \Return $P$
   \EndFunction
