--- a/doc/pubs/MOKP-DP-2017/src/imgs/dom.tex
+++ b/doc/pubs/MOKP-DP-2017/src/imgs/dom.tex
@@ -1,4 +1,5 @@
 \begin{pspicture}(-2,-2)(9, 8)
+\psscalebox{0.5}{
   \MGgridconfig{8}{7}
   \MGsol{1}{1}
   \MGsol{2}{2}
@@ -6,4 +7,5 @@
   \MGsol{5}{5}
   \MGsol{7}{6}
   \MGdominated{4}{3}{7}
+}
 \end{pspicture}
