--- a/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
@@ -18,10 +18,10 @@ each objective has to be minimized (or maximized).
 Considering two decision vectors $\sol{a}, \sol{b} \in X$, $\sol{a}$ is said to
 \emph{dominate} $\sol{b}$ if, and only if $\sol{a}$ is at least as good as $\sol{b}$
 in all objectives and better than $\sol{b}$ in at least one objective.
-For shortening we will say that $\sol{a}$ dominates $\sol{b}$ by saying $\dominates{a}{b}$.
+For shortening we will say that $\sol{a}$ dominates $\sol{b}$ by saying $\dom{a}{b}$.
 Formally:
 \begin{displaymath}
-    \dominates{a}{b} = \left\{
+    \dom{a}{b} = \left\{
       \begin{array}{l}
           \forall i \in \{1, 2, \ldots, \np\}: f_i(\sol{a}) \geq f_i(\sol{b}) ~\text{and}\\
           \exists j \in \{1, 2, \ldots, \np\}: f_j(\sol{a}) > f_j(\sol{b})
@@ -37,30 +37,35 @@ Solving a multiobjective problem consists in giving its Pareto optimal set.
 
 An instance of a multiobjective knapsack problem (MOKP) with $\np$
 objectives consists of an integer capacity $W > 0$ and $n$ items.
-Each item $i$ has a positive weight $w_i$ and non negative integer
+Each item $i$ has a positive weight $w_i$ and nonnegative integer
 profits $p_i^1, p_i^2, \ldots, p_{i}^{\np}$.
 Each profit $p_i^k$ represents the contribution of the $i$-th item for $k$-th objective.
-A solution is represented by a set $\sol{s} \subseteq \{1, \ldots, n\}$
+A solution is represented by a set $\sol{x} \subseteq \{1, \ldots, n\}$
 containing the indexes of the items included in the solution.
 A solution is feasible if the total weight included in the knapsack does
 not exceed its capacity.
 Formally the definition of the problem is:
 \begin{align*}
-    \text{max   } & f(\sol{s}) = 
-      \big(f_1(\sol{s}) ,f_2(\sol{s}) ,\ldots ,f_{\np}(\sol{s})\big) \\
-    \text{subject to   } & w(\sol{s}) < W \\
-    & \sol{s} \subseteq \setIN\\
-    \text{where} \phantom{mmmmm} \\
-    %I_n &= \{1, \ldots, n\}\\
-    f_j(\sol{s}) &= \sum_{i \in \sol{s}} p^j_i\\
-    w(\sol{s}) &= \sum_{i \in \sol{s}} w_i
+  \text{max   } & f(\sol{x}) = 
+    \big(f_1(\sol{x}) ,f_2(\sol{x}) ,\ldots ,f_{\np}(\sol{x})\big) \\
+  \text{subject to   } & w(\sol{x}) < W \\
+  & \sol{x} \subseteq \setIN\\
+  \text{where} \phantom{mmmmm} \\
+  %I_n &= \{1, \ldots, n\}\\
+  f_j(\sol{x}) &= \sum_{i \in \sol{x}} p^j_i\\
+  w(\sol{x}) &= \sum_{i \in \sol{x}} w_i
 \end{align*}
+Considering two solutions $\sol{x}, \sol{y} \subseteq \setIN$ $\sol{y}$ is
+called \emph{extension} of $\sol{x}$, denoted as $\ext{x}{y}$,
+iff $\sol{x} \subseteq \sol{y}$.
+Any set $\sol{e} \subseteq \setIN$ such that $\sol{x} \cap \sol{e} = \emptyset$
+is considered an \emph{extender} of $\sol{x}$.
 
 The MOKP is considered a \nphard{} problem since it is a generalization
 of the well-known 0$-$1 knapsack problem, in which $\np = 1$.
 It is quite difficult to determine the Pareto optimal set for the MOKP,
-especially for high dimension instances, in which the solution it self
-(Pareto optimal set) tends to grow exponentially.
+especially for high dimension instances, in which the 
+Pareto optimal set tends to grow exponentially.
 Even for the bi-objective case, small problems may prove intractable.
 For this reason we are interested in developing efficient methods for
 handling large solution sets, which may bring tractability to previously
