escrevendo algoritmo Bazgan

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -22,7 +22,7 @@
 \newcommand{\dom}[2]{dom(\sol{#1}, \sol{#2})}
 \newcommand{\domk}[2]{dom_k(\sol{#1}, \sol{#2})}
 \newcommand{\setIN}{\{1, \ldots, n\}}
-\newcommand{\ext}[2]{ext(#1, #2)}
+\newcommand{\ext}[2]{ext(\sol{#1}, \sol{#2})}
 
 \input{src/mokp-grid.tex}   % configuracoes para desenho de grid
 
