--- a/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
@@ -1,6 +1,6 @@
 % Breve definicao de multiobjective opt
 A general multiobjective optimization problem can be described as a vector
-function $f$ that maps a tuple of $n$ parameters (decision variables) to a tuple
+function $f$ that maps a decision variable (solution) to a tuple
 of $\np$ objectives.
 Formally:
 \begin{align*}
@@ -9,9 +9,9 @@ Formally:
     ,f_2(\sol{x})
     ,\ldots
     ,f_{\np}(\sol{x})\big) \\
-  \text{subject to} ~ \sol{x} & = (x_1, x_2, \ldots, x_n) \in X
+  \text{subject to} ~ \sol{x} & \in X
 \end{align*}
-where $\sol{x}$ is the \emph{decision vector}, $X$ denotes the set
+where $\sol{x}$ is the \emph{decision variable}, $X$ denotes the set
 of feasible solutions, and $\sol{y}$ is the \emph{objective vector} where
 each objective has to be minimized (or maximized).
 
@@ -29,7 +29,7 @@ Formally:
 \end{displaymath}
 
 A feasible solution $\sol{a} \in X$ is called \emph{efficient} %or \emph{non-dominated}
-if its not dominated by any other feasible solution.
+if it is not dominated by any other feasible solution.
 %if there is no other feasible solution $\sol{b} \in X$ such that $\sol{b}$ dominates $\sol{a}$.
 The set of all efficient solutions of a multiobjective optimization problem is
 known as \emph{Pareto optimal}.
@@ -55,11 +55,6 @@ Formally the definition of the problem is:
   f_j(\sol{x}) &= \sum_{i \in \sol{x}} p^j_i\\
   w(\sol{x}) &= \sum_{i \in \sol{x}} w_i
 \end{align*}
-Considering two solutions $\sol{x}, \sol{y} \subseteq \setIN$ $\sol{y}$ is
-called \emph{extension} of $\sol{x}$, denoted as $\ext{x}{y}$,
-iff $\sol{x} \subseteq \sol{y}$.
-Any set $\sol{e} \subseteq \setIN$ such that $\sol{x} \cap \sol{e} = \emptyset$
-is considered an \emph{extender} of $\sol{x}$.
 
 The MOKP is considered a \nphard{} problem since it is a generalization
 of the well-known 0$-$1 knapsack problem, in which $\np = 1$.
@@ -70,5 +65,46 @@ Even for the bi-objective case, small problems may prove intractable.
 For this reason we are interested in developing efficient methods for
 handling large solution sets, which may bring tractability to previously
 intractable instances.
+
+Considering two solutions $\sol{x}, \sol{y} \subseteq \setIN$, $\sol{y}$ is
+called \emph{extension} of $\sol{x}$, denoted as $\ext{y}{x}$,
+iff $\sol{x} \subseteq \sol{y}$.
+Any set $\sol{e} \subseteq \setIN$ such that $\sol{x} \cap \sol{e} = \emptyset$
+is called an \emph{extender} of $\sol{x}$.
+If $\weight{x} + \weight{e} \leq W$ than $\sol{e}$ is called a
+\emph{feasible extender} of $\sol{x}$.
+A solution $\sol{x}$ is called \emph{deficient} if it has available space
+to fit one or more item, i.e.\,, $\weight{x} + min\{ w_i : i \notin \sol{x} \} \leq W$.
+%Considering two solution $\sol{x}, \sol{y} \subseteq \setIN$
+We say
+$\sol{x}$ \emph{knapsack-dominates} $\sol{y}$, denoted as $\domk{x}{y}$,
+if $\sol{x}$ dominates $\sol{y}$ and does not weight more than $\sol{y}$.
+Formally:
+\begin{displaymath}
+  \domk{x}{y} = \left\{
+    \begin{array}{l}
+      \dom{x}{y} \quad \text{and} \\
+      w(\sol{x}) \leq w(\sol{y})
+    \end{array}
+  \right.
+\end{displaymath}
+Figure~\ref{fig:kdom} illustrates the concept of kanpsack-dominance for a
+problem with $m = 1$.
+Any solution in the cross-hatched area knapsack-dominates the marked solution.
+\begin{figure}
+  \input{src/imgs/dom.tex}
+  \caption{A knapsack-dominated solution.}
+  \label{fig:kdom}
+\end{figure}
+
+\begin{theorem}
+  Consider two solutions $\sol{x}, \sol{y} \subseteq \setIN$
+  and $\sol{e}$ an extender for $\sol{x}$ and $\sol{y}$.
+  If $\domk{x}{y}$ than $\domk{x \cup e}{y \cup e}$.
+\end{theorem}
+\begin{proof}
+  
+\end{proof}
+
 
 % Definições, Propriedados e teoremas para o MOKP: dominancia
