escrevendo algoritmo bazgan

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -19,6 +19,7 @@
 \newcommand{\nphard}{$\mathcal{NP}$-Hard}
 \newcommand{\missing}[1]{\fbox{\tiny \bf #1}}
 \newcommand{\weight}[1]{w(\sol{#1})}
+\newcommand{\bigweight}[1]{w\big(\sol{#1}\big)}
 \newcommand{\dom}[2]{dom(\sol{#1}, \sol{#2})}
 \newcommand{\domk}[2]{dom_k(\sol{#1}, \sol{#2})}
 \newcommand{\setIN}{\{1, \ldots, n\}}
