--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -15,6 +15,7 @@
 \newcommand{\kdtree}{$k$-d~tree}
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
 \newcommand{\sol}[1]{\boldsymbol{#1}}
+\newcommand{\fsol}[1]{f(\sol{#1})}
 \newcommand{\np}{m}
 \newcommand{\nphard}{$\mathcal{NP}$-Hard}
 \newcommand{\missing}[1]{\fbox{\tiny \bf #1}}
@@ -24,6 +25,7 @@
 \newcommand{\domk}[2]{dom_k(\sol{#1}, \sol{#2})}
 \newcommand{\setIN}{\{1, \ldots, n\}}
 \newcommand{\ext}[2]{ext(\sol{#1}, \sol{#2})}
+\newcommand{\domLess}[2]{ \sol{#1} \prec \sol{#2} }
 
 \input{src/mokp-grid.tex}   % configuracoes para desenho de grid
 
