--- a/doc/pubs/MOKP-DP-2017/src/algs/dp2.tex
+++ b/doc/pubs/MOKP-DP-2017/src/algs/dp2.tex
@@ -1,19 +1,22 @@
 \begin{algorithmic}[1]
-    \Function{BazDP}{$\bsym{p}, \bsym{w}, W$}
-    \State $S^0 = [\emptyset ]$
-    \For{$k \gets 1, n$}
-      \State $S^{k-1} = [\sol{s_1}, \ldots, \sol{s_p}]$
-      \State $w_{left} \gets (w_{k} + \ldots + w_n)$
-      \State $i \gets min\{i \;| \; \weight{s_i} \geq w_{left}\}$
-        \Comment{Deficient solution avoidance}
-      \State $j \gets 1$
-      \While{ $\bigweight{s^{k-1}_i} < w_{left}$ }
-        \State $\ldots$
-        \State $i \gets i + 1$
-      \EndWhile
-      \State $1$
-    \EndFor
+    \Function{BazDP}{$\bsym{p}, \bsym{w}, W, S^*, k$}
+    %\State $w_{left} \gets (w_{k+1} + \ldots + w_n)$
+    %\For{$\sol{x} = \{\sol{s_1}, \ldots, \sol{s_p}\}$}
+    %\State $j \gets min\big\{ j \;| \; \weight{s_j} \geq w_{left}\big\}$
+    \State $S_1 \gets \big\{\sol{x} \cup \{k\} \;|\; \sol{x}
+      \in S^*, \weight{x} < w_k \big\}$
+      \Comment{solutions extension}
+      %\State $\phantom{S_1 \gets } \cup \big\{ \sol{x} \in S^* \; | \; \weight{x} > w_{left} \big\}$
+      \State $\phantom{S_1 \gets } \cup \big\{ \sol{x} \in S^* \; | \; \weight{x} > (w_{k+1} + \ldots + w_n)\big\}$
+      %\State $\phantom{S_1 \gets } \cup \big\{ \sol{x} \in S^* \; | \; \weight{x} > \sum_{i = k+1}^n w_i \big\}$
+        \Comment{deficiency avoidance}
+    \State $S_2 \gets \{\sol{x} \in S_1 \;|\; \nexists \sol{a} \in S_1: \domk{a}{x} \}$
+      \Comment{knapsack dominance filter}
+    %\State $S_{lb} \gets \{ lb(\sol{x}) \;|\; \sol{x} \in S_2 \}$
+    %  \Comment{LBs computation}
+    \State $S \gets \big\{ \sol{x} \;|\; \nexists \sol{a} \in S_2 : dom\big(lb(\sol{a}), up(\sol{x})\big)\big\}$
+      \Comment{LBs filter}
   %\State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dom{a}{x} \}$
-  \State \Return $P$
+  \State \Return $S$
   \EndFunction
 \end{algorithmic}
