melhorias na escrita dos algoritmos

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -26,6 +26,8 @@
 \newcommand{\setIN}{\{1, \ldots, n\}}
 \newcommand{\ext}[2]{ext(\sol{#1}, \sol{#2})}
 \newcommand{\domLess}[2]{ \sol{#1} \prec \sol{#2} }
+%\newcommand{\logicAnd}{ \textrm{ and } }
+\newcommand{\logicAnd}{ \wedge }
 
 \input{src/mokp-grid.tex}   % configuracoes para desenho de grid
 
