--- a/doc/pubs/MOKP-DP-2017/src/algs/dp1.tex
+++ b/doc/pubs/MOKP-DP-2017/src/algs/dp1.tex
@@ -4,10 +4,10 @@
     \For{$k \gets 1, n$}
       \State $S_*^k = S^{k-1} \cup \{\sol{x} \cup k \:|\: \sol{x} \in S^{k-1}\}$
         \Comment{solutions extension}
-      \State $S^k = \{\sol{x} \:|\: \nexists \sol{a} \in S_*^k: \domk{a}{x} \}$
+      \State $S^k = \{\sol{x} \in S_*^k \:|\: \nexists \sol{a} \in S_*^k: \domk{a}{x} \}$
         \Comment{partial dominance filter}
     \EndFor
-  \State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dom{a}{x} \}$
+  \State $P = \{\sol{x} \in S^n \:|\: \nexists \sol{a} \in S^n: \dom{a}{x} \}$
     \Comment{dominance filter}
   \State \Return $P$
   \EndFunction
