escrita do unpromissing opt...

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -27,9 +27,11 @@
 \newcommand{\ext}[2]{ext(\sol{#1}, \sol{#2})}
 \newcommand{\domLess}[2]{ \sol{#1} \prec \sol{#2} }
 %\newcommand{\logicAnd}{ \textrm{ and } }
-\newcommand{\logicAnd}{ \wedge }
+\newcommand{\logicAnd}{ \land }
+\newcommand{\logicOr}{ \lor}
 \newcommand{\solSetA}{ Q }
 \newcommand{\solSetB}{ R }
+\newcommand{\solSett}{ S_* }
 \newcommand{\solSet}{ S }
 
 \input{src/mokp-grid.tex}   % configuracoes para desenho de grid
