--- a/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
@@ -78,9 +78,13 @@ Formally:
 \begin{displaymath}
 \end{displaymath}
 \begin{align*}
-    lb(\sol{x}) &= \big(lb_1(\sol{x}),\ldots, lb_\np(\sol{x}) \big) \\
-    \text{where} \phantom{mmmmm} \\
-    lb_i(\sol{x}) &= ...
+  lb(\sol{x}) &= \big(lb_1(\sol{x}),\ldots, lb_\np(\sol{x}) \big) \\
+  \text{where} \phantom{mmmmm} \\
+  I_{s} &= \{i, \ldots, n\}\backslash \sol{x} \\
+    \alpha &= \big\{ \alpha_i \in I_{s} \;|\;
+      (\forall j)[o_{\alpha_i} \geq o_{\alpha_j}] \big\} \\
+    q &= max( i \;|\; \sum_{i=1}^{})\\
+  lb_i(\sol{x}) &= \big\{  \big\} \\
 \end{align*}
 
 \subsection{Item order}
