--- a/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
@@ -85,6 +85,43 @@ Formally:
     (o_1, \ldots, o_k) &= O_{max}(\sol{s}) \\
 \end{align*}
 
+An upper bound of a solution can be easily computed...
+
+Formally:
+\begin{align*}
+    ub(\sol{x}, \sol{S}) &= \big(ub_1(\sol{x}, \sol{S}), \ldots, ub_\np(\sol{x}, \sol{S})\big) \\
+      %\bigg\{ o_i \;\bigg|\; \weight{x} + \sum_{j=1}^i w_{o_j} \leq W \bigg\} \\
+    ub_i(\sol{x}, \sol{s}) &= f_i(\sol{x}) + \textstyle\sum^r_{j=1} p^i_{o^i_j} + t.p^i_{o^i_{r+1}}\\
+  \text{where} \phantom{mmmmm} \\
+    (o_1, \ldots, o_k) &= O_{cb}^i(\sol{S}) \\
+    r &= max\big( j \;\big|\; \weight{x} + \textstyle\sum_{l = 1}^j w_{o^i_l} \leq W \big) \\
+    t &= \textstyle
+\end{align*}
+
+\begin{algorithm}
+  \caption{Upper-bound computation for a partial solution.}
+  \label{alg:up}
+  \begin{algorithmic}[1]
+      \Function{UP}{$\sol{p}, \bsym{w}, W, \sol{x}, \sol{S}$}
+      \State $\solSet^0 = \big\{\emptyset\big\}$
+      \For{$k \gets 1, n$}
+        % Extension
+        \State $\solSett^k = \big\{\sol{x} \cup \{k\} \;\big|\; \sol{x}
+          \in \solSet^{k-1} \logicAnd \big(\weight{x} + w_k \leq W\big) \big\}$
+        % Extension (cont.)
+        \State $\phantom{\solSett^k = } \cup \big\{ \sol{x} \;\big|\; \sol{x} \in \solSet^{k-1} \logicAnd
+          \big(\weight{x} + w_{k} + \ldots + w_n\big) > W \big\}$
+        % Dominance filter
+        \State $\solSet^k = \big\{\sol{x} \in \solSett^k \;\big|\;
+          (\nexists \sol{a} \in \solSett^k)\big[\domk{a}{x}
+            \logicOr dom\big(lb(\sol{a}), up(\sol{x})\big)\big] \big\}$
+      \EndFor
+      \State \Return $\solSet^n$
+    \EndFunction
+  \end{algorithmic}
+\end{algorithm}
+
+
 \begin{algorithm}
   \caption{Bazgan's DP algorithm for the MOKP}
   \label{alg:bazgan}
