escrevendo sobre lower bound

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -33,6 +33,7 @@
 \newcommand{\solSetB}{ R }
 \newcommand{\solSett}{ S_* }
 \newcommand{\solSet}{ S }
+\newcommand{\ord}{\mathcal{O}}
 
 \input{src/mokp-grid.tex}   % configuracoes para desenho de grid
 
