--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -34,6 +34,7 @@
 \newcommand{\solSett}{ S_* }
 \newcommand{\solSet}{ S }
 \newcommand{\ord}{\mathcal{O}}
+\newcommand{\cb}[2]{cb^{#1}(#2)}  % cost-benefit function
 
 \input{src/mokp-grid.tex}   % configuracoes para desenho de grid
 
