--- a/doc/pubs/MOKP-DP-2017/src/imgs/dom-kd.tex
+++ b/doc/pubs/MOKP-DP-2017/src/imgs/dom-kd.tex
@@ -1,3 +1,12 @@
+\documentclass[margin=3pt]{standalone}%
+\usepackage[pdf]{pstricks}
+\usepackage{pst-node}
+\usepackage{pstricks-add}
+
+\input{mokp-grid.tex}   % configuracoes para desenho de grid
+
+\begin{document}
+
 \begin{pspicture}(-2,-2)(17, 13)
 \psscalebox{0.5}{
   \MGgridconfig{16}{12}
@@ -13,3 +22,4 @@
 }
 \end{pspicture}
 
+\end{document}
